adicionado migrations especification e documentaçao
