# src/modules/cars/entities/Specification.ts
@@ -1,10 +1,23 @@
+import {
+  Column,
+  CreateDateColumn,
+  Entity,
+  PrimaryColumn,
+} from 'typeorm';
 import { v4 as uuidV4 } from 'uuid';
 
+@Entity('specifications')
 class Specification {
-  id?: string;
-  name: string;
-  description: string;
-  created_at: Date;
+  @PrimaryColumn()
+    id?: string;
+  @Column()
+    name: string;
+
+  @Column()
+    description: string;
+
+  @CreateDateColumn()
+    created_at: Date;
 
   constructor() {
     if (!this.id) {
